--- a/20181031-直播大纲.md
+++ b/20181031-直播大纲.md
@@ -22,6 +22,7 @@
     - [学习git的使用](#学习git的使用)
         - [视频课：基于命令行的用法](#视频课基于命令行的用法)
         - [视频课：基于 Source Tree](#视频课基于-source-tree)
+    - [Python 资料网盘](#python-资料网盘)
         - [日常使用](#日常使用)
     - [学习 markdown](#学习-markdown)
 - [学习节奏](#学习节奏)
@@ -186,6 +187,14 @@ https://mp.weixin.qq.com/s/jR8jSnAYtCFTZOVfgifM9g
 早期为实验室录制的课程，仅供参考。
 
 链接:https://pan.baidu.com/s/1E6QiCgNfoW3KBNctoyjjEQ  密码:d77p
+
+## Python 资料网盘
+
+百度网盘下载限速，体验不太好，先将就一下。
+
+链接:https://pan.baidu.com/s/1xgJ_SqUZiwWn_yTVyTWoqA  密码:8p8d
+
+目前没有任何资料，以后我录制的视频，以及比较大型的文件，都会放在这里。
 
 ### 日常使用
 
